@@ -9,10 +9,12 @@ export(flux2irrad)
 export(getspec)
 export(irrad2flux)
 export(is.rspec)
+export(loadrgl)
 export(peakshape)
 export(plotsmooth)
 export(procspec)
 export(projplot)
+export(projpoints)
 export(segclass)
 export(sensmodel)
 export(spec2rgb)
